# TART

./: .gitignore  CONTRIBUTORS.md  INSTALL.md  README.md
doc/: README.md
doc/calibration/: README.md
doc/getting_started/: .gitignore  README.md  autocorrelation.py  download_raw_data.py  image_from_raw.py  image_from_vis.py  simple_image.py  time_sampled_signals.py
doc/misc/: README.md
docker/: README.md  docker-compose.yml
docker/calibration_server/: Dockerfile  README.md  build.sh  crontab  run.sh
docker/object_position_server/: Dockerfile  README.md  build.sh  run.sh
docker/telescope_web_api/: Dockerfile  build.sh  (+2 more)
hardware/: README.md
scripts/: README.md  docker-cleanup.sh  docker_build.sh  install_pi.sh  upload_ops.sh
software/: Dockerfile.testbench  README.md  docker-compose-client.yml  docker-compose-telescope.yml  docker-compose.yml  test.sh  testbench-compose.yml
software/front_end/rust/: Cargo.toml  INSTALL.md  Makefile  README.md  WEB.md  data.json
software/front_end/rust/gridless-wasm/: Cargo.toml  Makefile
software/front_end/rust/gridless-wasm/src/: lib.rs
software/front_end/rust/nodeproject/: Makefile  index.html  index.js  package-lock.json  package.json
software/front_end/rust/src/: gridless.rs  img.rs  lib.rs  main.rs  sphere.rs  sphere_plot.rs  tart_api.rs  tart_obs.rs  utils.rs
software/front_end/rust/src/svg/: common.rs  mod.rs  path.rs  shapes.rs  text.rs
software/front_end/rust/withoutBundler/: index.html
web-app/: INSTALL.md  Makefile  README.md  angular-cli.json  package-lock.json  package.json  proxy.conf.json
(+1672 files in other folders)
